[tool.poetry]
name = "pycatia"
version = "0.5.4"
description = "A python module to access the CATIA Measurable object."
authors = ["Paul Bourne <evereux@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^303"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
